# copilot-converter

./: .gitignore  .gitleaksignore  .markdownlint  .markdownlintignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  HANDOFF.md  README.md  beastmode.agent.md  plugin-selection.json  pyproject.toml  pyrightconfig.json
.github/: awesome-copilot-install-state.json  copilot-converter-install-state.json
.github/instructions/: cicd-automation.instructions.md  cloud-infrastructure.instructions.md  database-design.instructions.md  dotnet-contribution.instructions.md  javascript-typescript.instructions.md  julia-development.instructions.md  jvm-languages-java.instructions.md  jvm-languages-scala.instructions.md  kubernetes-operations.instructions.md  python-development.instructions.md  shell-scripting.instructions.md  systems-programming-c.instructions.md  systems-programming-cpp.instructions.md  systems-programming-go.instructions.md  systems-programming-rust.instructions.md
.github/plugin/: marketplace.json
.github/prompts/: accessibility-compliance__accessibility-audit.prompt.md  agent-orchestration__improve-agent.prompt.md  agent-orchestration__multi-agent-optimize.prompt.md  api-testing-observability__api-mock.prompt.md  application-performance__performance-optimization.prompt.md  backend-development__feature-development.prompt.md  c4-architecture__c4-architecture.prompt.md  cicd-automation__workflow-automate.prompt.md  code-documentation__code-explain.prompt.md  code-documentation__doc-generate.prompt.md  code-refactoring__context-restore.prompt.md  code-refactoring__refactor-clean.prompt.md  code-refactoring__tech-debt.prompt.md  code-review-ai__ai-review.prompt.md  codebase-cleanup__deps-audit.prompt.md  codebase-cleanup__refactor-clean.prompt.md  codebase-cleanup__tech-debt.prompt.md  comprehensive-review__full-review.prompt.md  comprehensive-review__pr-enhance.prompt.md  conductor__implement.prompt.md  conductor__manage.prompt.md  conductor__new-track.prompt.md  conductor__revert.prompt.md  (+61 more)
scripts/: install-vscode-fallback-awesome-copilot.ps1  install-vscode-fallback-copilot-converter.ps1  install-vscode-fallback.ps1  list_awesome_copilot_unused_artifacts.py  precommit_pwsh_syntax_check.py
(+342 files in other folders)
