[project]
name = "copilot-converter"
version = "0.1.0"
description = "Utilities for converting Claude Code agents and plugins into GitHub Copilot artifacts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
copilot-converter = "copilot_converter.app:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_converter"]

[tool.hatch.build.targets.sdist]
include = ["src/copilot_converter"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "prek",
    "pyclean",
]

[tool.ruff]
lint.extend-select = ['Q', 'C90', "F", "E", "W", "I001", "C", "B"]
lint.ignore = [
    #"E501", # line too long, handled by black
    # "B008", # do not perform function calls in argument defaults (fastapi)
    # "C901", # too complex (long functions)
]
lint.mccabe = { max-complexity = 14 }
lint.pydocstyle = { convention = 'google' }
line-length = 120
target-version = "py314"

[tool.mypy]
ignore_missing_imports = false
